--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,16 @@
-page-home {
 
+.ios, .md {
+ 
+    home-page {
+ 
+      .scroll {
+        height: 100%;
+        overflow-y:visible;
+        border: 1px solid black; 
+      }
+      #map {
+        width: 100%;
+        height: 100%;
+      } 
+    }
 }
